--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "npm run build && npm run server"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
